--- a/admin/login.html
+++ b/admin/login.html
@@ -38,6 +38,64 @@
     </div>
   </div>
 
+
+  <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+              aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">温馨提示</h4>
+        </div>
+        <div class="modal-body">
+          ...
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">确定</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    $(function () {
+      $('.input_sub').on('click', function (e) {
+        e.preventDefault();
+        let username = $('.input_txt').val().trim();
+        let password = $('.input_pass').val().trim();
+        if (username == '' || password == '') {
+          $('.modal-body').text('请输入正确的格式  !');
+          $('#myModal').modal();
+          return;
+        }
+        $.ajax({
+          url: 'http://localhost:8080/api/v1/admin/user/login',
+          type: 'post',
+          data: {
+            username: username,
+            password: password
+          },
+          success: function (backData) {
+            console.log(backData);
+            if (backData.code == 200) {
+              $('.modal-body').text('输入正确');
+              $('#myModal').modal();
+              $('#myModal').on('hidden.bs.modal', function (e) {
+                window.location.href = './index.html';
+              })
+
+            } else {
+              $('.modal-body').text('输入有误');
+              // alert(backData.msg);
+              $('#myModal').modal();
+              return;
+            }
+          }
+        })
+      })
+    })
+  </script>
+
 </body>
 
 </html>
