user个人中心以及给左侧栏添加点击事件

--- a/admin/login.html
+++ b/admin/login.html
@@ -77,7 +77,7 @@
             password: password
           },
           success: function (backData) {
-            console.log(backData);
+            // console.log(backData);
             if (backData.code == 200) {
               $('.modal-body').text('输入正确');
               $('#myModal').modal();
