--- a/admin/index.html
+++ b/admin/index.html
@@ -85,7 +85,7 @@
                 type: 'get',
                 dataType: 'json',
                 success: function (backData) {
-                    console.log(backData);
+                    // console.log(backData);
                     $('.user_info>span>i').text(backData.data.nickname);
                     $('.user_info>img').attr('src', backData.data.userPic);
                     $('.user_center_link>img').attr('src', backData.data.userPic);
@@ -100,7 +100,7 @@
             // }
             // xhr.send();
 
-
+            //退出登录,删除token令牌
             $('.logout').on('click', function (e) {
                 e.preventDefault();
                 if (confirm('您确定你要登出嘛?')) {
@@ -109,6 +109,25 @@
                 }
 
             })
+
+            //给左侧栏的每个模块注册点击事件
+            $('.level01').on('click',function(){
+                
+                $(this).addClass('active').siblings('div').removeClass('active');
+                if($(this).index() == 1) {
+                    $('ul.level02>li:eq(0)').trigger('click')
+                    $('ul.level02').slideToggle();
+                    $(this).find('b').toggleClass('rotate0');
+
+                }
+            })
+
+
+            $('ul.level02>li').on('click',function(){
+                $(this).addClass('active').siblings('li').removeClass('active');
+                
+            })
+
         })
     </script>
 </body>
