--- a/admin/user.html
+++ b/admin/user.html
@@ -69,5 +69,67 @@
         </div>
     </div>
 </body>
+<script src="./libs/http.js"></script>
+<script>
+    $(function () {
+        $.ajax({
+            url: BigNew.user_detail,
+            type: 'get',
+            success: function (backData) {
+
+                if (backData.code == 200) {
+                    console.log(backData);
+                    for (var key in backData.data) {
+                        $(`input.${key}`).val(backData.data[key]);
+                        $('.user_pic').attr('src', backData.data.userPic);
+                    }
+                }
+
+            }
+        })
+
+        $('#exampleInputFile').on('change', function () {
+            var f1 = $(this.files)[0];
+            var url = URL.createObjectURL(f1);
+            $(this).prev('img').attr('src', url);
+        })
+
+        $('.btn-success').on('click', function (e) {
+            e.preventDefault();
+            var form1 = $('form')[0];
+            var fd1 = new FormData(form1);
+            $.ajax({
+                url: BigNew.user_edit,
+                type: 'post',
+                data: fd1,
+                contentType: false,
+                processData: false,
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        console.log(backData);
+                        alert('更新成功!');
+                        // parent.window.location.reload();
+
+                        $.ajax({
+                            url: BigNew.user_info,
+                            // headers : {
+                            //     'Authorization':localStorage.getItem('token');
+                            // },
+                            type: 'get',
+                            dataType: 'json',
+                            success: function (backData) {
+                                // console.log(backData);
+                                parent.$('.user_info>span>i').text(backData.data.nickname);
+                                parent.$('.user_info>img').attr('src', backData.data.userPic);
+                                parent.$('.user_center_link>img').attr('src',backData.data.userPic);
+                            }
+                        })
+                    }
+
+                }
+            })
+        })
+    })
+</script>
 
 </html>
