--- a/admin/article_category.html
+++ b/admin/article_category.html
@@ -51,5 +51,32 @@
             </table>
         </div>
     </div>
+    <script src="./libs/http.js"></script>
+    <script id='article' type="text/html">
+        {{each data v}}
+        <tr>
+            <td>{{v.name}}</td>
+            <td>{{v.slug}}</td>
+            <td class="text-center">
+                <a href="javascript:void(0)" data-id = '{{v.id}}' data-toggle="modal" class=" btn btn-info btn-xs">编辑</a>
+                <a href="javascript:void(0)" data-id = '{{v.id}}' class="btn btn-danger btn-xs">删除</a>
+            </td>
+        </tr>
+        {{/each}}
+    </script>
+    <script>
+        $(function () {
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                success: function (backData) {
+                    console.log(backData);
+                    var temp1 = template('article',backData);
+                    $('tbody').html(temp1);
+                }
+            })
+        })
+    </script>
+</body>
 
 </html>
