--- a/admin/article_list.html
+++ b/admin/article_list.html
@@ -6,12 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>文章列表</title>
+    <script src="./libs/jquery-1.12.4.min.js"></script>
     <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap.min.css">
+    <script src="./libs/bootstrap/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/iconfont.css">
     <link rel="stylesheet" href="./css/main.css">
-    <script src="./libs/jquery-1.12.4.min.js"></script>
     <!-- 引入模板引擎js文件 -->
+    <script src="./libs/jquery.twbsPagination.js"></script>
     <script src="./libs/template-web.js"></script>
 </head>
 
@@ -69,6 +71,7 @@
                 </tbody>
             </table>
             <div class="row text-center">
+                <ul id="pagination" class="pagination-sm"></ul>
             </div>
         </div>
     </div>
@@ -77,7 +80,7 @@
 
     <!-- 下拉菜单模板引擎 -->
     <script id="select_list" type="text/html">
-        <option>所有分类</option>
+        <option value="">所有分类</option>
         {{each data v}}
         <option value="{{v.id}}">{{v.name}}</option>
         {{/each}}
@@ -115,19 +118,132 @@
                 }
             })
 
-            // 获取默认的文章数据列表,显示在页面上
-            $.ajax({
-                url: BigNew.article_query,
-                type: 'get',
-                success: function (backData) {
-                    if (backData.code == 200) {
-                        // console.log(backData);
+            // 封装一个函数，因为要动态改变页数,所以传一个页码形参,因为成功后可能要回调函数,所以传一个callback函数
+            function getData(mypage, callback) {
+                $.ajax({
+                    url: BigNew.article_query,
+                    type: 'get',
+                    data: {
+                        type: $('#selCategory').val().trim(),
+                        state: $('#selStatus').val().trim(),
+                        page: mypage,
+                        perpage: 6
+                    },
+                    success: function (backData) {
+                        console.log(backData);
                         var temp2 = template('content', backData);
                         $('tbody').html(temp2);
+                        // 添加页码插件
+                        if(callback !=null){
+                            callback(backData);
+                        }
+
                     }
 
-                }
+                })
+            }
+            // 页面一进来调用getdata函数渲染页面，渲染完毕后需要创建页码插件并定义，然后给页码的页数点击事件(页码点击事件是自己的方法)
+            // 当点击页码时,再次发送ajax请求,并把响应回来的当前页数据渲染到页面(再次调用getdata方法)
+            getData(1, function (backData) {
+                $('#pagination').twbsPagination({
+                    totalPages: backData.data.totalPage, //总页数
+                    visiblePages: 6, //显示的页数
+                    first: '首页',
+                    prev: '上一页',
+                    next: '下一页',
+                    last: '尾页',
+                    onPageClick: function (event, page) {
+                        // console.info(page);
+                        // 响应回来的当前页数据渲染到页面(再次调用getdata方法)
+                        getData(page,null);
+
+                    }
+                });
+            });
+
+
+            // 给筛选注册点击事件,加载新的数据需要再次调用getData方法发送ajax请求
+            $('#btnSearch').on('click', function (e) {
+                e.preventDefault();
+                getData(1,function(backData){
+                     // 根据num值重新加载新的页数,最后面的参数是是当前显示的页数
+                    $('#pagination').twbsPagination('changeTotalPages', backData.data.totalPage, 1)
+                })
             })
+
+
+
+
+
+            // -------------------------------------------------------------------------------
+            // $.ajax({
+            //     url: BigNew.article_query,
+            //     type: 'get',
+            //     data: {
+            //         type: $('#selCategory').val().trim(),
+            //         state: $('#selStatus').val().trim(),
+            //         page: 1,
+            //         perpage: 6
+            //     },
+            //     success: function (backData) {
+            //         console.log(backData);
+            //         var temp2 = template('content', backData);
+            //         $('tbody').html(temp2);
+            //         // 添加页码插件
+            //         $('#pagination').twbsPagination({
+            //             totalPages: backData.data.totalPage, //总页数
+            //             visiblePages: 6, //显示的页数
+            //             first:'首页',
+            //             prev:'上一页',
+            //             next:'下一页',
+            //             last:'尾页',
+            //             onPageClick: function (event, page) {
+            //                 // console.info(page);
+            //                 $.ajax({
+            //                     url: BigNew.article_query,
+            //                     type: 'get',
+            //                     data: {
+            //                         type: $('#selCategory').val().trim(),
+            //                         state: $('#selStatus').val().trim(),
+            //                         page: page,
+            //                         perpage: 6
+            //                     },
+            //                     success: function (backData) {
+            //                         console.log(backData);
+            //                         var temp2 = template('content', backData);
+            //                         $('tbody').html(temp2);
+            //                     }
+
+            //                 })
+
+            //             }
+            //         });
+            //     }
+
+            // })
+
+            // $('#btnSearch').on('click', function (e) {
+            //     e.preventDefault();
+            //     $.ajax({
+            //         url: BigNew.article_query,
+            //         type: 'get',
+            //         data: {
+            //             type: $('#selCategory').val().trim(),
+            //             state: $('#selStatus').val().trim(),
+            //             page: 1,
+            //             perpage: 6
+            //         },
+            //         success: function (backData) {
+            //             var temp2 = template('content', backData);
+            //             $('tbody').html(temp2);
+            //             $('#pagination').twbsPagination('changeTotalPages',backData.data.totalPage,1);
+            //         }
+
+            //     })
+            // })
+            // -------------------------------------------------------------------------------------
+
+
         })
     </script>
 </body>
