--- a/admin/article_edit.html
+++ b/admin/article_edit.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- jq -->
     <script src="./libs/jquery-1.12.4.min.js"></script>
+    <link rel="stylesheet" href="./libs/jedate/css/jeDate-test.css">
+    <link rel="stylesheet" href="./libs/jedate/css/jedate.css">
+    <script src="./libs/jedate/js/jedate.js"></script>
+    <script src="./libs/wangEditor.js"></script>
     <!-- 模板引擎 -->
     <script src="./libs/template-web.js"></script>
 </head>
@@ -51,11 +55,19 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <div class="jeinpbox">
+                            <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
+                            <div class="icons jebtns" onclick="jeDate('#testico',{trigger:false,format: 'YYYY-MM-DD'})">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
+                        <div id="editor">
+                            <p>欢迎使用 <b>wangEditor</b> 富文本编辑器</p>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
@@ -67,6 +79,89 @@
             </form>
         </div>
     </div>
+    <script src="./libs/http.js"></script>
+    <!-- 下拉菜单模板引擎 -->
+    <script id="list" type="text/html">
+        {{each data v}}
+        <option>{{v.name}}</option>
+        {{/each}}
+    </script>
+
+    <!-- 富文本编辑框 -->
+    <script type="text/javascript">
+        var E = window.wangEditor
+        var editor = new E('#editor')
+        // 或者 var editor = new E( document.getElementById('editor') )
+        editor.create()
+    </script>
+
+    <script>
+        //加载日期插件
+        jeDate('#testico', {
+            trigger: 'click',
+            theme: {
+                bgcolor: "#00A680",
+                pnColor: "#00DDAA"
+            }, //绿色主题
+            format: "YYYY-MM-DD",
+            isinitVal: true,
+        });
+
+        $(function () {
+            // 获取文章的ID
+            var uid = window.location.search.split("?")[1];
+            // 获取所有的文章类别,然后通过模板引擎渲染到下拉菜单中.
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        // console.log(backData);
+                        var temp1 = template('list', backData);
+                        $('.category').html(temp1);
+                    }
+                }
+            })
+
+            // 发送ajax拿到文章的具体数据
+            $.ajax({
+                url: BigNew.article_search,
+                type: 'get',
+                data: {
+                    id: uid,
+                },
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        console.log(backData);
+                        // 把响应的内容填空到页面上
+                        $('#inputTitle').val(backData.data.title);
+                        $('.article_cover').attr('src', backData.data.cover);
+                        $('#testico').val(backData.data.date);
+
+                        // 把响应的类别id存起来
+                        var dataId = backData.data.categoryId;
+                        $.ajax({
+                            url: BigNew.category_search,
+                            type: 'get',
+                            data: {
+                                id: dataId,
+                            },
+                            success: function (backData_) {
+                                if (backData_.code == 200) {
+                                    // console.log(backData_);
+                                    $('.category').val(backData_.data[0].name);
+
+                                }
+                            }
+                        })
+                    }
+
+                }
+            })
+
+
+        })
+    </script>
 </body>
 
 </html>
