--- a/admin/article_edit.html
+++ b/admin/article_edit.html
@@ -37,7 +37,10 @@
                     <label for="inputCover" class="col-sm-2 control-label">文章封面：</label>
                     <div class="col-sm-10">
                         <img src="images/pic06.jpg" class="article_cover">
-                        <input name="cover" type="file" id="inputCover">
+                        <input name="cover" type="file" id="inputCover" style="display: none;">
+                        <label for="inputCover" style="display: block;">
+                            <img src="./images/uploads_icon.jpg" alt="" style=" width: 50px; cursor: pointer;">
+                        </label>
                     </div>
                 </div>
                 <div class="form-group">
@@ -56,8 +59,8 @@
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
                         <div class="jeinpbox">
-                            <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD">
-                            <div class="icons jebtns" onclick="jeDate('#testico',{trigger:false,format: 'YYYY-MM-DD'})">
+                            <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD" name="date">
+                            <div class="icons jebtns" onclick="jeDate('#testico', {trigger:false, zIndex: 19999,format: 'YYYY-MM-DD'})">
                             </div>
                         </div>
                     </div>
@@ -83,22 +86,15 @@
     <!-- 下拉菜单模板引擎 -->
     <script id="list" type="text/html">
         {{each data v}}
-        <option>{{v.name}}</option>
+        <option value="{{v.id}}">{{v.name}}</option>
         {{/each}}
-    </script>
-
-    <!-- 富文本编辑框 -->
-    <script type="text/javascript">
-        var E = window.wangEditor
-        var editor = new E('#editor')
-        // 或者 var editor = new E( document.getElementById('editor') )
-        editor.create()
     </script>
 
     <script>
         //加载日期插件
         jeDate('#testico', {
             trigger: 'click',
+            zIndex: 19999,
             theme: {
                 bgcolor: "#00A680",
                 pnColor: "#00DDAA"
@@ -107,7 +103,22 @@
             isinitVal: true,
         });
 
+        // 富文本编辑框 
+        var E = window.wangEditor
+        var editor = new E('#editor')
+        // 或者 var editor = new E( document.getElementById('editor') )
+        editor.create()
+
+
         $(function () {
+            // 头像预览
+            $('#inputCover').on('change', function () {
+                var url = URL.createObjectURL(this.files[0]);
+                $(this).prev().attr('src', url);
+            })
+
+            // -----------------------------------------------------------------------上面是插件 ，头像预览等准备工作,下面是发送ajax获取数据
+
             // 获取文章的ID
             var uid = window.location.search.split("?")[1];
             // 获取所有的文章类别,然后通过模板引擎渲染到下拉菜单中.
@@ -132,33 +143,51 @@
                 },
                 success: function (backData) {
                     if (backData.code == 200) {
-                        console.log(backData);
+                        // console.log(backData);
                         // 把响应的内容填空到页面上
                         $('#inputTitle').val(backData.data.title);
                         $('.article_cover').attr('src', backData.data.cover);
                         $('#testico').val(backData.data.date);
-
-                        // 把响应的类别id存起来
-                        var dataId = backData.data.categoryId;
-                        $.ajax({
-                            url: BigNew.category_search,
-                            type: 'get',
-                            data: {
-                                id: dataId,
-                            },
-                            success: function (backData_) {
-                                if (backData_.code == 200) {
-                                    // console.log(backData_);
-                                    $('.category').val(backData_.data[0].name);
-
-                                }
-                            }
-                        })
+                        $('select.category').val(backData.data.categoryId);
+                        editor.txt.text(backData.data.content);
                     }
-
                 }
             })
 
+            // //编辑文章ajax请求封装
+            function editArticlie(state,isSuccess) {
+                var fd = $('form')[0];
+                var f1 = new FormData(fd);
+                f1.append('content',editor.txt.html());
+                f1.append('id', uid);
+                f1.append('state', state);
+                
+                $.ajax({
+                    url:BigNew.article_edit,
+                    type:'post',
+                    data:f1,
+                    contentType:false,
+                    processData:false,
+                    success:function(backData){
+                        if(backData.code == 200){
+                            alert(isSuccess);
+                            window.history.back();
+                        }
+                    }
+                })
+            }
+
+            //修改文章
+            $('.btn-edit').on('click', function (e) {
+                e.preventDefault();
+                editArticlie('已发布','修改成功!');
+            })
+
+            //存为草稿
+            $('.btn-draft').on('click', function (e) {
+                e.preventDefault();
+                editArticlie('草稿','存为草稿成功!');
+            })
 
         })
     </script>
