--- a/admin/article_release.html
+++ b/admin/article_release.html
@@ -12,6 +12,10 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- jq -->
     <script src="./libs/jquery-1.12.4.min.js"></script>
+    <link rel="stylesheet" href="./libs/jedate/css/jeDate-test.css">
+    <link rel="stylesheet" href="./libs/jedate/css/jedate.css">
+    <script src="./libs/jedate/js/jedate.js"></script>
+    <script src="./libs/wangEditor.js"></script>
     <!-- 模板引擎 -->
     <script src="./libs/template-web.js"></script>
 </head>
@@ -19,7 +23,7 @@
 <body>
     <div class="container-fluid">
         <div class="common_title">
-            文章编辑
+            发表文章
         </div>
         <div class="container-fluid common_con">
             <form class="form-horizontal article_form" id="form">
@@ -33,7 +37,10 @@
                     <label for="inputCover" class="col-sm-2 control-label">文章封面：</label>
                     <div class="col-sm-10">
                         <img src="images/pic06.jpg" class="article_cover">
-                        <input name="cover" type="file" id="inputCover">
+                        <input name="cover" type="file" id="inputCover" style="display: none;">
+                        <label for="inputCover" style="display: block;">
+                            <img src="./images/uploads_icon.jpg" alt="" style=" width: 50px; cursor: pointer;">
+                        </label>
                     </div>
                 </div>
                 <div class="form-group">
@@ -51,22 +58,132 @@
                 <div class="form-group">
                     <label class="col-sm-2 control-label">发布时间：</label>
                     <div class="col-sm-4">
+                        <div class="jeinpbox">
+                            <input type="text" class="jeinput" id="testico" placeholder="YYYY-MM-DD" name="date">
+                            <div class="icons jebtns"
+                                onclick="jeDate('#testico', {trigger:false, zIndex: 19999,format: 'YYYY-MM-DD'})">
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputEmail3" class="col-sm-2 control-label">文章内容：</label>
                     <div class="col-sm-10">
+                        <div id="editor">
+                            <p>欢迎使用 <b>wangEditor</b> 富文本编辑器</p>
+                        </div>
                     </div>
                 </div>
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
-                        <button type="submit" class="btn btn-success btn-release">发布</button>
+                        <button type="submit" class="btn btn-success btn-edit">发布</button>
                         <button type="submit" class="btn btn-default btn-draft">存为草稿</button>
                     </div>
                 </div>
             </form>
         </div>
     </div>
+
+    <script src="./libs/http.js"></script>
+    <!-- 下拉菜单模板引擎 -->
+    <script id="list" type="text/html">
+        {{each data v}}
+        <option value="{{v.id}}">{{v.name}}</option>
+        {{/each}}
+    </script>
+
+    <script>
+        //加载日期插件
+        jeDate('#testico', {
+            trigger: 'click',
+            zIndex: 19999,
+            theme: {
+                bgcolor: "#00A680",
+                pnColor: "#00DDAA"
+            }, //绿色主题
+            format: "YYYY-MM-DD",
+            isinitVal: true,
+        });
+
+        // 富文本编辑框 
+        var E = window.wangEditor
+        var editor = new E('#editor')
+        // 或者 var editor = new E( document.getElementById('editor') )
+        editor.create()
+
+        $(function () {
+
+            // 头像预览
+            $('#inputCover').on('change', function () {
+                var url = URL.createObjectURL(this.files[0]);
+                $(this).prev().attr('src', url);
+            })
+
+            // -----------------------------------------------------------------------上面是插件 ，头像预览等准备工作,下面是发送ajax获取数据
+
+            // 获取所有的文章类别,然后通过模板引擎渲染到下拉菜单中.
+            $.ajax({
+                url: BigNew.category_list,
+                type: 'get',
+                success: function (backData) {
+                    if (backData.code == 200) {
+                        // console.log(backData);
+                        var temp1 = template('list', backData);
+                        $('.category').html(temp1);
+                    }
+                }
+            })
+
+            //为发布注册点击事件 
+            $('.btn-edit').on('click', function (e) {
+                e.preventDefault();
+                var form1 = $('form')[0];
+                var fd = new FormData(form1);
+                fd.append('content', editor.txt.html());
+                fd.append('state', '已发布');
+                $.ajax({
+                    url: BigNew.article_publish,
+                    type: 'post',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        console.log(backData);
+                        if(backData.code ==200){
+                            alert('发布成功!');
+                            window.location.href = './article_list.html';
+                        }
+
+                    }
+                })
+            })
+
+            $('.btn-draft').on('click',function(e){
+                e.preventDefault();
+                var form1 = $('form')[0];
+                var fd = new FormData(form1);
+                fd.append('content', editor.txt.html());
+                fd.append('state', '草稿');
+                $.ajax({
+                    url: BigNew.article_publish,
+                    type: 'post',
+                    data: fd,
+                    contentType: false,
+                    processData: false,
+                    success: function (backData) {
+                        console.log(backData);
+                        if(backData.code ==200){
+                            alert('存为草稿!');
+                            window.location.href = './article_list.html';
+                        }
+
+                    }
+                })
+            })
+
+
+        })
+    </script>
 </body>
 
 </html>
