--- a/list.html
+++ b/list.html
@@ -227,6 +227,66 @@
     </div>
     <!-- 导包template -->
     <script src="./js/template-web.js"></script>
+
+    <!-- 展示数据模板 -->
+    <script id="list_temp" type="text/html">
+        {{each data.data v}}
+        <div class="common_news_list">
+            <a href="./article.html?id={{v.id}}" class="list_pic"><img src="{{v.cover}}" alt=""></a>
+            <h4><a href="./article.html?id={{v.id}}">{{v.title}}</a></h4>
+            <p>{{@ v.content}}</p>
+            <div class="new_info">
+                <span>标签：{{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-eye"></i>&nbsp;阅读({{v.read}})&nbsp;&nbsp;&nbsp;
+                    <i class="fa fa-commenting"></i>&nbsp;评论( {{v.comments}} )</span>
+                <b>发布于 {{v.date}}</b>
+            </div>
+        </div>
+        {{/each}}
+    </script>
+    <script>
+        $(function () {
+            var value1 = window.location.search.split('=')[0];
+            var value2 = window.location.search.split('=')[1];
+            // 如果是用户直接进来的，就让他强制去首页
+            if (value1 == "") {
+                window.location.href = './index.html';
+            } else if (value1 == '?id') {
+                // 这里是点击文章类别进来的
+                $.ajax({
+                    url: 'http://localhost:8080/api/v1/index/search',
+                    data: {
+                        type: value2
+                    },
+                    success: function (backData) {
+                        if (backData.code == 200) {
+                            // console.log(backData);
+                            var resHtml = template('list_temp', backData);
+                            $('.left_con').html('<div class="list_title"> <h3>' + backData.data
+                                .data[0].category + '</h3> </div>' + resHtml);
+                        }
+                    }
+                })
+
+            } else {
+                // 这里是搜索进来的
+                value2 = decodeURI(value2);
+                // console.log(value2);
+                $.ajax({
+                    url: 'http://localhost:8080/api/v1/index/search',
+                    data: {
+                        key: value2
+                    },
+                    success: function (backData) {
+                        console.log(backData);
+                        var resHtml = template('list_temp', backData);
+                        $('.left_con').html('<div class="list_title"> <h3>搜索:' + value2 + '</h3> </div>' + resHtml);
+                    }
+                })
+            }
+
+        })
+    </script>
 </body>
 
 </html>
