--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
         <div class="common_news_list">
             <a href="./article.html?id={{v.id}}" class="list_pic"><img src="{{v.cover}}" alt=""></a>
             <h4><a href="./article.html?id={{v.id}}">{{v.title}}</a></h4>
-            <p>{{@ v.intro}}</p>
+            <p>{{@ v.center}}</p>
             <div class="new_info">
                 <span>标签：{{v.category}}&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;
                     <i class="fa fa-eye"></i>&nbsp;阅读({{v.read}})&nbsp;&nbsp;&nbsp;
