--- a/article.html
+++ b/article.html
@@ -293,7 +293,9 @@
                     success:function(backData){
                         if(backData.code ==201){
                             // console.log(backData);
-                            alert('评论发表成功!');
+                            alert('评论发表成功! 请等待后台审核!');
+                            $('.comment_name').val('');
+                            $('.comment_input').val('');
                         }
                     }
                 })
